# RType

./: CLAUDE.md  CMakeUserPresets.json  FINDINGS.md
client/include/client/ui/: App.hpp  Screens.hpp
client/include/client/ui/widgets/: Button.hpp  InputBox.hpp  Title.hpp
client/src/assets/: Assets.cpp
client/src/net/: Net.cpp  NetPackets.cpp
client/src/ui/: App.cpp  Screens.cpp
client/src/ui/screens/: GameOver.cpp  Gameplay.cpp  Leaderboard.cpp  Menu.cpp  Multiplayer.cpp  NotEnoughPlayers.cpp  Options.cpp  Singleplayer.cpp  Waiting.cpp
client/src/ui/widgets/: Button.cpp  InputBox.cpp  Title.cpp
client/src/utils/: Utils.cpp
common/include/common/: Protocol.hpp
docs/: audio.md
engine/: CMakeLists.txt
engine/src/: Systems.cpp
engine/src/components/: Music.cpp  SoundEffect.cpp
engine/src/rt/components/: Music.hpp  Player.hpp  SoundEffect.hpp
engine/src/rt/game/: Components.hpp
server/include/gameplay/: GameSession.hpp  ThreadSafeRegistry.hpp
server/include/protocol/: TcpServer.hpp
server/src/: TcpServer.cpp  UdpServer.cpp
server/src/gameplay/: GameSession.cpp
